--- a/client/src/assets/css/gamebox.css
+++ b/client/src/assets/css/gamebox.css
@@ -11,6 +11,6 @@
   border-top: 5px, solid, #d6d7d8;
   padding-top: 5%;
   padding-bottom: 5%;
-  margin-top: 0.5%;
+  margin-top: 200px;
   margin-bottom: 0.5%;
 }
